<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="wsid.acsl.MainActivity">

    \\nested scrollview digunakan agar semua componen layout dapat di scroll
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.55"
            android:orientation="vertical"
            android:scrollbars="vertical">

            \\ViewPager ini yang nantinya akan digunakan sebagai slider pada activity Home
            <android.support.v4.view.ViewPager
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:background="@drawable/bg1" />

            \\pada bagian ini slider dots akan digunakan sebagai penanda dimana gambar viewpager itu aktif
            <LinearLayout
                android:id="@+id/Sliderdots"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="horizontal">
                \\memasukan layout cv_welcome.xml yang nantinya digunakan sebagai welcome card yang berisi peraturan
                \\dan konsekuensi
                <include layout="@layout/cv_welcome" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_assignment_turned_in_black_24dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/slider_main1"
                    android:textStyle="bold" />
            </LinearLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#cccccc"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingTop="@dimen/activity_vertical_margin">


                    \\content

                    <RelativeLayout
                        android:layout_width="200dp"
                        android:layout_height="200dp">

                        <ImageView
                            android:id="@+id/imgfpga"
                            android:layout_width="@dimen/width_img_quiz"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/mdlfpga"
                            android:scaleType="fitXY"
                            android:src="@drawable/mdlfpga" />


                    </RelativeLayout>
                    \\content

                    \\content

                    <RelativeLayout
                        android:layout_width="200dp"
                        android:layout_height="200dp">

                        <ImageView
                            android:id="@+id/imgjkd"
                            android:layout_width="@dimen/width_img_quiz"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/mdljkd"
                            android:scaleType="fitXY"
                            android:src="@drawable/mdljkd" />

                    </RelativeLayout>
                    \\content

                    \\content

                    <RelativeLayout
                        android:layout_width="200dp"
                        android:layout_height="200dp">

                        <ImageView
                            android:id="@+id/imgjkl"
                            android:layout_width="@dimen/width_img_quiz"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/mdljkl"
                            android:scaleType="fitXY"
                            android:src="@drawable/mdljkl" />

                    </RelativeLayout>
                    \\content

                    \\content

                    <RelativeLayout
                        android:layout_width="200dp"
                        android:layout_height="200dp">

                        <ImageView
                            android:id="@+id/imgmcs"
                            android:layout_width="@dimen/width_img_quiz"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/mdlmcs"
                            android:scaleType="fitXY"
                            android:src="@drawable/mdlmcs" />


                    </RelativeLayout>
                    \\content


                </LinearLayout>


            </HorizontalScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_account_box_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/slider_main2"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/all_pj"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:text="Lihat Semua"
                    android:textAlignment="textEnd"
                    android:textIsSelectable="true"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/activity_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                tools:context=".MainActivity">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_pjshift"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:scrollbars="horizontal" />

            </LinearLayout>


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


    \\ bagian yang digunakan  untuk Bottom Navigation yang menampilkan 3 menu utama
    <android.support.design.widget.BottomNavigationView
            android:id="@+id/navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:itemIconTint="@color/bnv_tab_item_foreground"
            app:itemTextColor="@color/bnv_tab_item_foreground"
            android:background="?android:attr/windowBackground"
            app:menu="@menu/navigation" />



</LinearLayout>

